--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<title>Regalo Tulipán 💐</title>
+<title>Regalito 💖</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
 :root {
@@ -174,8 +174,8 @@ body{
   <div class="stage" role="main">
     <div class="left">
       <div>
-        <div class="title">💐 Regalito para mi amorcito <span style="font-size:16px;font-weight:500;color:var(--accent)">Best Part (feat. H.E.R)</span></div>
-        <div class="subtitle">Introduce la fecha que abre el regalo</div>
+        <div class="title">Un pequeño regalito para mi amorcito 💕 <span style="font-size:16px;font-weight:500;color:var(--accent)">Si ma vie était un film, tu en serais sans aucun doute le meilleur personnage 💕</span></div>
+        <div class="subtitle"></div>
       </div>
 
       <div class="gift-wrap">
@@ -197,7 +197,9 @@ body{
       </div>
 
       <div class="card" id="card" aria-hidden="true">
-        <p id="cardText">Hola mi amor 💕 Esta canción me hace pensar en ti cada vez que la escucho, amo imaginarte, imaginar tu hermmosa sonrisa, tus ojitos bellos mirandome, amo todo de ti y esta cancion lo dice claramente, eres el brillo en mi vida te amo muchoooooooooooooo :3 💖</p>
+        <p id="cardText">Hola mi amor 💕, esto es un pequeño regalito, una cancion que queria dedicarle hoy para que no olvide que la amo muchito mi vida y tambien decirle que esta haciendo un gran esfuerzo todos los dias y estoy muy orgulloso de usted mi amor muy muy orgulloso :3, merece un fuerte abrazo que le dare apenas la vea por todo lo que hace, se a esforzado tanto este tiempo y amo ver como logra sus cosas, como sale adelante usted solita, verla como avanza cada dia me pone muy feliz, me alegro y agradezco poder ver sus momentos 💖, se que su padre tambien esta muy orgulloso de usted mi amor, que cada dia esta mas feliz de como su hija logra avanzar en su vida :D 💖 
+          Te amo mucho mi niña hermosa, espero le guste este pequeño detalle lamento si no se ve muy bien, hace rato no toco codigo y bueno trate de hacer lo mejor que pude :3 espero le guste, TE AAAAAAMMMMOOOOOOOO MI REEIIINNAAAAAAAAAAAAAAAAAAAA 💕💕💕💕💕💕💕💕💕💕
+        </p>
         <div class="close-card"><button id="closeCard" class="btn" style="background:transparent;border:1px solid var(--accent);color:var(--accent)">Cerrar</button></div>
       </div>
     </div>
