--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ body{
 
 /* Responsive */
 @media (max-width:768px){
-  .stage{grid-template-columns:1fr;gap:18px;padding:18px;text-align:center;height: 100px;}
+  .stage{grid-template-columns:1fr;gap:18px;padding:18px;text-align:center;height: 40vh;}
   .gift-wrap{height:260px}
   .gift{width:180px;height:180px}
   .title{font-size:22px}
@@ -165,7 +165,7 @@ body{
   .label{width:68px;height:68px}
   .player-card{max-width:100%}
   /* mover carta un poco más abajo en móvil si hiciera falta */
-  .card{top:200px}
+  .card{top:570px}
   .lyrics-panel{right:10px;left:10px;top:auto;bottom:14px;width:calc(100% - 20px);max-height:40vh}
 }
 </style>
