--- a/index.html
+++ b/index.html
@@ -153,9 +153,17 @@ body{
 .gift.shake { animation: romanticShake 720ms cubic-bezier(.2,.9,.3,1); }
 .gift.moved { transform: translateX(-150px) !important; transition: transform .6s cubic-bezier(.2,.9,.3,1); }
 
-/* Responsive */
 @media (max-width:768px){
-  .stage{grid-template-columns:1fr;gap:18px;padding:18px;text-align:center;height: 40vh;}
+  body {
+    padding-top: 40px; /* <-- mueve todo hacia abajo en celular */
+  }
+  .stage{
+    grid-template-columns:1fr;
+    gap:18px;
+    padding:18px;
+    text-align:center;
+    height: 40vh;
+  }
   .gift-wrap{height:260px}
   .gift{width:180px;height:180px}
   .title{font-size:22px}
@@ -163,11 +171,18 @@ body{
   .platter{width:170px;height:170px}
   .vinyl{width:150px;height:150px}
   .label{width:68px;height:68px}
-  .player-card{max-width:100%;height: 200px;}
-  /* mover carta un poco más abajo en móvil si hiciera falta */
-  .card{top:570px}
-  .lyrics-panel{right:10px;left:10px;top:auto;bottom:14px;width:calc(100% - 20px);max-height:40vh}
+  .player-card{max-width:100%;height:200px;}
+  .card{top:570px} /* puedes bajar o subir este valor según se vea */
+  .lyrics-panel{
+    right:10px;
+    left:10px;
+    top:auto;
+    bottom:14px;
+    width:calc(100% - 20px);
+    max-height:40vh;
+  }
 }
+
 </style>
 </head>
 <body>
